RESOLVED FIXED199123
Null deref in WebFrameLoaderClient::dispatchDidReceiveServerRedirectForProvisionalLoad
https://bugs.webkit.org/show_bug.cgi?id=199123
Summary Null deref in WebFrameLoaderClient::dispatchDidReceiveServerRedirectForProvis...
Brady Eidson
Reported 2019-06-21 16:44:16 PDT
Null deref in WebFrameLoaderClient::dispatchDidReceiveServerRedirectForProvisionalLoad This is almost certainly related to PSON changes but is difficult to pin down actual causes. I'm going to add some fault logging so we can gather more data on it. <rdar://problem/51535942>
Attachments
Patch (4.32 KB, patch)
2019-06-21 16:53 PDT, Brady Eidson
no flags
Patch (4.43 KB, patch)
2019-06-24 15:12 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2019-06-21 16:53:39 PDT
Brady Eidson
Comment 2 2019-06-24 15:12:09 PDT
WebKit Commit Bot
Comment 3 2019-06-24 16:00:28 PDT
Comment on attachment 372806 [details] Patch Clearing flags on attachment: 372806 Committed r246767: <https://trac.webkit.org/changeset/246767>
WebKit Commit Bot
Comment 4 2019-06-24 16:00:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.